--- a/style/style.css
+++ b/style/style.css
@@ -9,6 +9,13 @@
   display: inline-block;
 }
 
+.navbar li{
+  display: inline-block;
+  float: right;
+  text-align: center;
+  margin-left: 7px;
+}
+
 .nav-right{
   display: inline-block;
   float: right;
