--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,9 @@
+.container {
+  margin: 0px !important;
+  padding: 0px !important;
+  max-width:100% !important;
+}
+
 .navbar {
   display: inline-block;
   width: 100%;
@@ -19,12 +25,17 @@
 .nav-right{
   display: inline-block;
   float: right;
+  margin-top: 15px;
 }
 
 .nav-right a{
   margin-right: 10px;
   text-decoration: none;
   color: gray;
+}
+
+.active {
+  color: purple;
 }
 
 .footer {
@@ -47,13 +58,14 @@ form a{
 }
 
 .main_div{
-  max-width: 100%;
+  width: 100%;
+  height: 100%;
 }
 
-.main img{
+.main_div img{
   max-width: 100%;
-  height: 100%;
-  display: block;
+  max-height: 100%;
+  /*display: block;*/
 }
 
 .quote{
@@ -74,9 +86,10 @@ form a{
 }
 
 .image_container{
-  width: 910px;
-  height: 280px;
-/*  overflow: hidden;*/
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
 
 }
 
@@ -92,12 +105,13 @@ form a{
   -webkit-filter: grayscale(100%);
   filter: grayscale(100%);
   overflow: hidden;
-  margin-left: -20px;
+  margin-left: -10px;
   margin-top: 2px;
   -webkit-transition: -webkit-transform 0.3s ease;
   -moz-transition: -moz-transform 0.3s ease;
   -o-transition: -o-transform 0.3s ease;
   transition: transform 0.3s ease;
+  /*border: 1px solid black;*/
 }
 
 .box label{
