--- a/style/style.css
+++ b/style/style.css
@@ -174,6 +174,12 @@ form a{
 
 }
 
-.michelle p{
+/*CONTACT*/
+.contact_row{
+  border: 1px solid red;
+}
 
+.contact_row h1{
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight: 900;
 }
