--- a/style/style.css
+++ b/style/style.css
@@ -176,10 +176,37 @@ form a{
 
 /*CONTACT*/
 .contact_row{
-  border: 1px solid red;
+  /*border: 1px solid red;*/
 }
 
 .contact_row h1{
   font-family: 'Josefin Sans', sans-serif;
   font-weight: 900;
+}
+
+.eachIcon {
+  width: 200px;
+  height: 200px;
+
+  word-wrap: break-word;
+  /*border: 2px solid red;*/
+}
+
+.listIcons{
+  display: inline-block;
+  vertical-align: top;
+
+}
+
+.fa{
+  background-color: rgb(221,160,221);
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  padding-top: 13%;
+}
+
+.listIcons h5{
+  color: purple;
+  margin-top: 15px;
 }
